amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-interfaces-object.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-interfaces-object.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
